--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 	"dependencies": {
 		"native-base": "^2.1.1",
 		"react": "~15.4.1",
-		"react-native": "0.42.3"
+		"react-native": "0.42.3",
+		"react-native-android-voice": "^0.5.2",
+		"react-native-tts": "^1.4.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
